syntax = "proto3";
package gameMessageCore;
option go_package = "./messageGo/proto";

// 服务定义

// enum ServiceStatus {
//   ServiceStatusUnknown = 0;
//   ServiceStatusUp = 1;
//   ServiceStatusDown = 2;
// }

enum ServiceType{
  ServiceTypeUnknown = 0;
  // 主服务
  ServiceTypeMain = 1;
  // 账号服务
  ServiceTypeAccount = 2;
  // 场景(战斗)服务
  ServiceTypeScene = 3;
  // 任务服务
  ServiceTypeTask = 4;
  // 聊天服务
  ServiceTypeChat = 5;
  // 网关服务
  ServiceTypeAgent = 6;
  // 服务管理
  ServiceTypeManager = 7;  
  // 后台控制服务
  ServiceTypeController = 8;  
  // 日志服务
  ServiceTypeLog = 9;  
  // 好友(队伍 工会)服务
  ServiceTypeFriend = 10;  
  // 服务类型上限标记必须放在最后
  ServiceTypeLimit = 11;
}

enum SceneServiceSubType{
  UnknownSubType = 0;
  World = 1;
  Home = 2;
  Dungeon = 3;
} 